; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_zil.c_zil_fini.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_zil.c_zil_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@zil_zcw_cache = common dso_local global i32 0, align 4
@zil_lwb_cache = common dso_local global i32 0, align 4
@zil_ksp = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zil_fini() #0 {
  %1 = load i32, i32* @zil_zcw_cache, align 4
  %2 = call i32 @kmem_cache_destroy(i32 %1)
  %3 = load i32, i32* @zil_lwb_cache, align 4
  %4 = call i32 @kmem_cache_destroy(i32 %3)
  %5 = load i32*, i32** @zil_ksp, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = load i32*, i32** @zil_ksp, align 8
  %9 = call i32 @kstat_delete(i32* %8)
  store i32* null, i32** @zil_ksp, align 8
  br label %10

10:                                               ; preds = %7, %0
  ret void
}

declare dso_local i32 @kmem_cache_destroy(i32) #1

declare dso_local i32 @kstat_delete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
